--- a/gym/templates/index.html
+++ b/gym/templates/index.html
@@ -42,6 +42,16 @@
 
         </div>
 
+        <div class="row">
+            <div class="col-6 col-md-3 col-xl-4 mydivstyle">
+                <h2 style="color:blue">{{m1}}</h2>
+                <a href="{% url 'view_member' %}"><h4 style="color:aqua">Feedback</h4> </a>
+                <hr class="rounded">
+
+            </div>
+
+        </div>
+
 </div>
 <script>
     document.onload(function alerth(){
