--- a/gym/templates/navigationbar.html
+++ b/gym/templates/navigationbar.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head>
+<html>
     {% load static %}
   <title>Murfy Gym</title>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@ $(document).ready(function() {
 
 
 
-</head> 
+<head>
 
 
 <nav class="navbar navbar-expand-md bg-primary navbar-dark">
@@ -142,6 +142,8 @@ $(document).ready(function() {
     
 </nav>
 
+</head>
+<body>
 
 {% block body %}
 
@@ -149,4 +151,5 @@ $(document).ready(function() {
 
 {% endblock %}
 
-  
+</body>
+</html>
